# AutoOpsAI

./: .docker-compose.https.yml.swp  .env.example  .gitignore  AutoOpsAI_Hackathon_Presentation.pptx  AutoOps_AI_Roadmap.md  CLAUDE_CODE_INTEGRATION_ANALYSIS.md  POC_IMPROVEMENTS_ANALYSIS.md  README.md  REFERENCE_FEATURES.md  TODOs  _bench_loki.py  _test_e2e.py  create_hackathon_ppt.py  docker-compose.agent.yml  docker-compose.https.yml  main.py  patch_main.py  pyproject.toml  setup-https.sh  start.bat  start.sh  stop.bat  stop.sh  trace_chat.py
POCs/: FEATURES_POC_PLAN.md  INDEX.md  POC_DEVELOPMENT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  TESTING_CHECKLIST.md  env.py  persistence.py  pipeline_integration.py
POCs/anomaly_detection/: README.md  collector.py  demo.py  detector.py
POCs/approval_flow/: README.md  approval_router.py  cards.py  (+1 more)
agent/: __init__.py  config.py  main.py  models.py
docs/: AutoOpsAI_Pitch.pptx  AutoOps_AI_Roadmap.md  api-design.md  architecture.md  implementation-plan.md  playbook-schema.md  production-implementation-plan.md  provider-interface.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: docker-compose.target.yml  nginx-https.conf  nginx.conf
tests/: conftest.py  test_anomaly.py  test_api.py  test_approval.py  test_collectors.py  test_config.py  test_database.py  test_dependencies.py  test_engine.py  test_knowledge_base.py  test_llm.py  test_models.py  test_providers.py  test_remediation.py  test_risk.py  test_store_models.py  test_tool_executor.py  test_ws_manager.py
(+194 files in other folders)
